keila/ops/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keila
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keila
  template:
    metadata:
      labels:
        app: keila
    spec:
      containers:
      - name: keila
        image: pentacent/keila:latest
        ports:
        - containerPort: 4000
