keila/ops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keila
spec:
  selector:
    app: keila
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: LoadBalancer
